--- a/package.json
+++ b/package.json
@@ -9,8 +9,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.16",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^3.6.3",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "astro": "^4.16.16",
+    "prettier": "^3.4.1",
+    "prettier-plugin-astro": "^0.14.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "toastify-js": "^1.12.0",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/toastify-js": "^1.12.3"
   }
 }
