--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
-    "@types/toastify-js": "^1.12.3"
+    "@types/toastify-js": "^1.12.3",
+    "@vite-pwa/astro": "^0.4.3"
   }
 }
