--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "astro": "^4.16.16",
     "prettier": "^3.4.1",
     "prettier-plugin-astro": "^0.14.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "toastify-js": "^1.12.0",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
     "@types/toastify-js": "^1.12.3",
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@vite-pwa/astro": "^0.4.3"
   }
 }
